Added chat data

--- a/owner/owner-client/src/app/_components/chat/chat.component.css
+++ b/owner/owner-client/src/app/_components/chat/chat.component.css
@@ -27,18 +27,22 @@
 }
 
 .body {
-    height: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow: hidden;
+  height: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: hidden;
 }
 
 .message-wrapper {
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 0;
+  background-image: url("/assets/img/chat-space.jpg");
 }
 
 .input-wrapper {
@@ -62,7 +66,6 @@
 .input-wrapper > input:focus {
   border: 2px solid var(--primary);
 }
-
 
 @media (max-width: 960px) {
   .main-wrapper {
