--- a/owner/owner-client/src/app/_components/chat/chat.component.html
+++ b/owner/owner-client/src/app/_components/chat/chat.component.html
@@ -10,10 +10,9 @@
       height: isOpen ? '50vh' : '0',
       transition: 'height 0.5s ease-in-out'
     }">
-    <div class="message-wrapper mat-app-background">
+    <div class="message-wrapper">
       <ng-container *ngFor="let message of chat.messages">
         <app-message [message]="message"></app-message>
-        <mat-divider></mat-divider>
       </ng-container>
     </div>
     <div class="input-wrapper mat-app-background">
