--- a/owner/owner-client/src/app/_layouts/chats/chats.component.css
+++ b/owner/owner-client/src/app/_layouts/chats/chats.component.css
@@ -51,17 +51,10 @@
   border-top: 1px solid var(--primary);
   border-bottom: 1px solid var(--primary);
   background-image: url("/assets/img/chat-space.jpg");
-  position: relative;
-}
-
-.message-opacity {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: black;
-  opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 .footer-wrapper {
@@ -87,6 +80,10 @@
   align-items: center;
   justify-content: center;
   margin-top: 0.5rem;
+}
+
+.message-wrapper {
+  display: flex;
 }
 
 @media (max-width: 960px) {
