--- a/owner/owner-client/src/app/_layouts/chats/chats.component.html
+++ b/owner/owner-client/src/app/_layouts/chats/chats.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="side-nav-btn-wrapper">
         <button type="button" mat-icon-button matTooltip="Create new chat">
-          <mat-icon>group_add</mat-icon>
+          <mat-icon>add_circle</mat-icon>
         </button>
       </div>
     </div>
@@ -14,31 +14,27 @@
       <mat-divider></mat-divider>
     </div>
     <div class="chats-wrapper">
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
-      <app-side-nav-chat></app-side-nav-chat>
+      <ng-container *ngFor="let chat of chats">
+        <app-side-nav-chat
+          [chat]="chat"
+          (selectedChat)="onSelectChat($event)"
+        ></app-side-nav-chat>
+      </ng-container>
     </div>
   </div>
-  <div class="content-wrapper">
+  <div class="content-wrapper" *ngIf="selectedChat">
     <div class="header-wrapper">
-      <div class="chat-name">Ime chata</div>
+      <div class="chat-name">{{ selectedChat.name }}</div>
       <div class="header-btn-wrapper">
-        <button type="button" mat-icon-button matTooltip="Add user to group">
+        <button type="button" mat-icon-button matTooltip="Add user to chat">
           <mat-icon>person_add</mat-icon>
         </button>
-        <button type="button" mat-icon-button matTooltip="Delete chat">
+        <button
+          type="button"
+          mat-icon-button
+          matTooltip="Delete chat"
+          (click)="onDeleteChat()"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </div>
@@ -52,11 +48,15 @@
             <mat-icon>person_add</mat-icon>
             Add user to group
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="onOpenNewChatDialog()">
             <mat-icon>chat</mat-icon>
-            Open new chat
+            Open chats
           </button>
           <button mat-menu-item>
+            <mat-icon>add</mat-icon>
+            Create new chat
+          </button>
+          <button mat-menu-item (click)="onDeleteChat()">
             <mat-icon>delete</mat-icon>
             Delete chat
           </button>
@@ -64,7 +64,16 @@
       </div>
     </div>
     <div class="messages">
-      <div class="message-opacity"></div>
+      <ng-container *ngFor="let message of selectedChat.messages">
+        <div
+          class="message-wrapper"
+          [ngStyle]="{
+            'justify-content': message.isMine ? 'flex-end' : 'flex-start'
+          }"
+        >
+          <app-message [message]="message"></app-message>
+        </div>
+      </ng-container>
     </div>
     <div class="footer-wrapper">
       <textarea class="message-input"></textarea>
