--- a/owner/owner-client/src/app/_layouts/chats/side-nav-chat/side-nav-chat.component.css
+++ b/owner/owner-client/src/app/_layouts/chats/side-nav-chat/side-nav-chat.component.css
@@ -6,6 +6,7 @@
   border-top: 1px solid var(--accent);
   border-bottom: 1px solid var(--accent);
   position: relative;
+  cursor: pointer;
 }
 
 .first-col {
@@ -23,8 +24,8 @@
 }
 
 .chat-name {
-    font-size: 12px;
-    color: var(--primary);
+  font-size: 12px;
+  color: var(--primary);
 }
 
 .image-wrapper {
@@ -40,8 +41,8 @@
 }
 
 .message {
-    padding-left: 0.5rem;
-    line-height: 12px;
+  padding-left: 0.5rem;
+  line-height: 12px;
 }
 
 .online {
@@ -68,11 +69,22 @@
 }
 
 .background {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--accent);
-    opacity: 0.2;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--accent);
+  opacity: 0.2;
+}
+
+.spinner-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
