Get chat from query params

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
@@ -19,6 +19,14 @@
       type="button"
       mat-icon-button
       color="primary"
+      routerLink="/chats"
+    >
+      <mat-icon>chat</mat-icon>
+    </button>
+    <button
+      type="button"
+      mat-icon-button
+      color="primary"
       routerLink="/notifications"
     >
       <mat-icon>notifications</mat-icon>
