Working on chats

--- a/owner/owner-client/src/app/_components/chat/chat.component.css
+++ b/owner/owner-client/src/app/_components/chat/chat.component.css
@@ -67,6 +67,12 @@
   border: 2px solid var(--primary);
 }
 
+.participants-number {
+  font-size: 10px;
+  color: var(--primary);
+  margin-left: 0.5rem;
+}
+
 @media (max-width: 960px) {
   .main-wrapper {
     display: none;
