--- a/owner/owner-client/src/app/_components/chat/chat.component.html
+++ b/owner/owner-client/src/app/_components/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper" *ngIf="chat">
   <div class="header mat-app-background" matRipple [matRippleColor]="'var(--primary-light)'" (click)="isOpen = !isOpen">
-    <div>{{ chat.name }}</div>
+    <div (click)="onClickChatName($event)">{{ chat.name }} <span class="participants-number">+3</span></div>
 
     <button type="button" mat-icon-button (click)="onClose($event)">
       <mat-icon>cancel</mat-icon>
