Creating message btn event emitter

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -14,7 +14,7 @@
 
     <div class="notifications-wrapper">
       <ng-container *ngFor="let chat of chatsMenu.chats">
-        <app-side-nav-chat [chat]="chat"></app-side-nav-chat>
+        <app-side-nav-chat [chat]="chat" (selectedChat)="onSelectedChat($event)"></app-side-nav-chat>
         <mat-divider></mat-divider>
       </ng-container>
     </div>
