--- a/owner/owner-client/src/app/_layouts/chats/chat-create-dialog/chat-create-dialog.component.html
+++ b/owner/owner-client/src/app/_layouts/chats/chat-create-dialog/chat-create-dialog.component.html
@@ -1,144 +1,245 @@
 <div class="main-wrapper">
-    <form class="form-wrapper">
-        <mat-form-field appearance="outline" class="max-width">
-            <mat-label>Chat Name</mat-label>
-            <input matInput placeholder="Enter chat name">
-          </mat-form-field>
-    </form>
+  <form class="form-wrapper" [formGroup]="chatForm">
+    <mat-form-field appearance="outline" class="max-width">
+      <mat-label>Chat Name</mat-label>
+      <input matInput placeholder="Enter chat name" formControlName="name" />
+    </mat-form-field>
+  </form>
 
-    <div class="search-wrapper">
-        <app-search-bar></app-search-bar>
-    </div>
+  <div class="search-wrapper">
+    <app-search-bar></app-search-bar>
+  </div>
 
-    <div class="current-participants-wrapper">
-        <mat-chip-listbox aria-label="Dog selection">
-            <mat-chip>
-              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-              Dog one
-              <button type="button" matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip>
-            <mat-chip color="primary">
-              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-              Dog two
-              <button type="button" matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip>
-            <mat-chip color="accent">
-              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-              Dog three
-              <button type="button" matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip>
-          </mat-chip-listbox>
-    </div>
+  <div class="current-participants-wrapper">
+    <mat-chip-listbox aria-label="Dog selection">
+      <ng-container *ngFor="let participant of chatParticipants">
+        <mat-chip>
+          <img
+            matChipAvatar
+            src="{{
+              participant.profileImage || 'assets/img/default-profile.png'
+            }}"
+            alt="Profile Image"
+          />
+          {{ participant.username }}
+          <button
+            type="button"
+            matChipRemove
+            (click)="onRemoveChatParticipant(participant)"
+          >
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+      </ng-container>
+    </mat-chip-listbox>
+  </div>
 
-    <div class="divider-wrapper">
-        <mat-divider></mat-divider>
-    </div>
+  <div class="divider-wrapper">
+    <mat-divider></mat-divider>
+  </div>
 
-    <div class="participants-wrapper">
-        <mat-chip-listbox aria-label="Dog selection">
-            <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-              <mat-chip color="accent">
-                <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-                Dog three
-              </mat-chip>
-          </mat-chip-listbox>
-    </div>
+  <div class="participants-wrapper">
+    <mat-chip-listbox aria-label="Dog selection">
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+      <mat-chip color="accent">
+        <img
+          matChipAvatar
+          src="https://material.angular.io/assets/img/examples/shiba1.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        Dog three
+      </mat-chip>
+    </mat-chip-listbox>
+  </div>
 
-    <div class="btn-wrapper">
-        <button type="button" mat-raised-button color="warn">Cancel</button>
-        <button type="button" mat-raised-button color="accent">Save</button>
-    </div>
+  <div class="btn-wrapper">
+    <button type="button" mat-raised-button color="warn" (click)="onClose()">
+      Cancel
+    </button>
+    <button
+      type="button"
+      mat-raised-button
+      color="accent"
+      [disabled]="
+        chatForm.invalid || !chatForm.dirty || chatParticipants.length <= 0
+      "
+    >
+      Save
+    </button>
+  </div>
 </div>
