Added debounce time to search bar

--- a/owner/owner-client/src/app/_components/search-bar/search-bar.component.html
+++ b/owner/owner-client/src/app/_components/search-bar/search-bar.component.html
@@ -4,6 +4,6 @@
         transition: 'width 1s ease-in-out'
     }"
 >
-    <input type="text" placeholder="search..." (focus)="isOnFocus = true" (blur)="isOnFocus = false">
+    <input type="text" placeholder="search..." (focus)="isOnFocus = true" (blur)="isOnFocus = false" #input>
     <mat-icon class="search-svg" [ngClass]="{'search-svg-focus': isOnFocus}">search</mat-icon>
 </div>
