--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -22,6 +22,10 @@
     <mat-icon class="svg">menu_book</mat-icon>
   </app-side-nav-dropdown>
 
+  <app-side-nav-dropdown [name]="'tables'" [itemListObj]="tablesLinkItems">
+    <mat-icon class="svg">table_bar</mat-icon>
+  </app-side-nav-dropdown>
+
   <app-side-nav-item [name]="'Chat'" [url]="'/chats'">
     <mat-icon class="svg">chat</mat-icon>
   </app-side-nav-item>
