--- a/owner/owner-client/src/app/_layouts/tables/tables.component.html
+++ b/owner/owner-client/src/app/_layouts/tables/tables.component.html
@@ -1,1 +1,8 @@
-<p>tables works!</p>
+<div class="tables-wrapper">
+  <ng-container *ngFor="let table of tables">
+    <app-table-card
+      [table]="table"
+      (remove)="onRemoveTable($event)"
+    ></app-table-card>
+  </ng-container>
+</div>
